--- a/style.css
+++ b/style.css
@@ -3,3 +3,30 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  color: black;
+  text-align: center;
+}
+nav {
+  text-align: center;
+}
+a {
+  padding: 10px;
+  text-align: center;
+  background-color: grey;
+}
+#featured-property {
+  text-align: center;
+  
+}
+
+#details {
+  display: flex;
+  justify-content: flex-start;
+  width: auto;
+}
+div {
+  background-color: red;
+  text-align: center;
+  width: auto;
+}
